# darwinbox-ai-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vite.config.ts
backend/: __init__.py  app.py  dependencies.py  main.py
backend/agents/: __init__.py  action.py  policy.py  supervisor.py  workflow.py
backend/api/: router.py
backend/config/: settings.py
backend/core/: exceptions.py  middleware.py  state.py
backend/memory/: __init__.py
backend/rag/: __init__.py  chunking.py  embeddings.py  ingest.py  loader.py  models.py  pipeline.py  vectorstore.py
backend/schemas/: __init__.py  errors.py  health.py  workflow.py
backend/services/: application.py  workflow.py
backend/tools/: __init__.py  hr_tools.py
backend/tracing/: __init__.py  logging.py  manager.py
data/: evaluation_report.md
data/traces/: trace_0005bca0-3d67-4d4b-942e-23a9f3b56afc.json  trace_004e85c5-e98f-4e21-ba25-56f8fee792b4.json  trace_01ada820-9edd-40ba-a553-d29efa6774fe.json  trace_0350855d-7f57-482a-ac1f-7b2044830295.json  trace_03caf822-1a5b-4f37-8ddb-1dc702c70578.json  trace_04c604f4-0371-496e-8865-f3c97d8a980f.json  trace_065fb6f1-3b7c-4f3c-bed0-da382a7edd3d.json  trace_068c3305-fb3b-485f-a0e9-9f27ff3c848f.json  trace_077f2912-3639-40e4-90b2-c3c2a6fa6d8c.json  (+187 more)
docs/: architecture.md  hr_policy.md
frontend/: __init__.py  app.py
frontend-web/: api-middleware.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
scripts/: evaluate.py
tests/: test_action_agent.py  test_comprehensive.py  test_health.py  test_memory.py  test_observability.py  test_policy_agent.py  test_routing.py  test_workflow.py
(+11 files in other folders)
