[project]
name = "darwinbox-agentic-hr-workflow-engine"
version = "0.1.0"
description = "Production-ready scaffold for the Darwinbox Agentic HR Workflow Engine assignment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15,<2.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "langchain>=0.3.26,<0.4.0",
    "langchain-openai>=0.3.28,<0.4.0",
    "langgraph>=0.6.0,<0.7.0",
    "openai>=1.97.0,<2.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "streamlit>=1.47.0,<2.0.0",
    "structlog>=25.4.0,<26.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26.0.0",
    "httpx>=0.28.1,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.12.3,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    ".uv-cache",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "B008",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
